src/snapshots/rlox__test_runtime__shadowing_function_with_parameter.snap
---
source: src/main.rs
expression: "crate::common::test_util::mock_interpret(\"\n        fun a(a) {\n            print a;\n        }\n        a(1);\n        \")"
---
stdout:
1


stderr:


