src/snapshots/rlox__test_runtime__string.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(r#\"print \"foo\";\"#)"
---
stdout:
foo


stderr:


