src/snapshots/rlox__test_runtime__string_comparison.snap
---
source: src/vm.rs
expression: "crate::util::mock_interpret(r#\"print \"foo\" == \"foo\";\"#)"
---
stdout:
true


stderr:


