src/snapshots/rlox__test_runtime__top_level_return.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        return 1;\n        \")"
---
stdout:


stderr:


