src/snapshots/rlox__test_runtime__unary.snap
---
source: src/vm.rs
expression: "crate::util::mock_interpret(\"print -1 - -2 == --1 == true;\")"
---
stdout:
true


stderr:


