src/snapshots/rlox__test_runtime__unicode.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(r#\"print \"💩\" + \"👪\" + \"༕\" + \"갍\" + \"⑯\" + \"ฒ\" + \"ڦ\";\"#)"
---
stdout:
💩👪༕갍⑯ฒڦ


stderr:


