src/snapshots/rlox__test_runtime__uninitialized_is_nil.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        var foo;\n        print foo;\n        \")"
---
stdout:
nil


stderr:


